--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-api:2.3'
 
     compile 'javax.servlet:jstl:1.2'
+
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.0'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate4:2.6.0'
 }
