--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -8,5 +8,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile libraries.hibernate_core
+    compile libraries.hibernate_entitymanager
 }
