--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ ext.libraries = [
         log4j_core: 'org.apache.logging.log4j:log4j-core:2.3',
         log4j_api: 'org.apache.logging.log4j:log4j-api:2.3',
 
-        servlet: 'javax.servlet:jstl:1.2',
+        servlet_jstl: 'javax.servlet:jstl:1.2',
+        servlet_api: 'javax.servlet:javax.servlet-api:3.1.0',
 
         jackson_databind: 'com.fasterxml.jackson.core:jackson-databind:2.6.0',
         jackson_datatype: 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate4:2.6.0',
