--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -2,12 +2,18 @@ group 'org.freekode'
 version '0.1'
 
 apply plugin: 'java'
+apply plugin: 'war'
+
+configurations {
+    provided
+}
 
 repositories {
     mavenCentral()
 }
 
+
 dependencies {
-    compile libraries.hibernate_core
-    compile libraries.hibernate_entitymanager
+    providedCompile libraries.hibernate_core
+    providedCompile libraries.hibernate_entitymanager
 }
