--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -2,18 +2,12 @@ group 'org.freekode'
 version '0.1'
 
 apply plugin: 'java'
-apply plugin: 'war'
-
-configurations {
-    provided
-}
 
 repositories {
     mavenCentral()
 }
 
-
 dependencies {
-    providedCompile libraries.hibernate_core
-    providedCompile libraries.hibernate_entitymanager
+    compile libraries.hibernate_core
+    compile libraries.hibernate_entitymanager
 }
